Better Elevators Mod Pre Alpha 0.3
--------------------- Changes -----------------------

* Added Screen when clicking on Elevator Block (Empty Screen yet)

---------------- Technical Details ------------------

* Changed Elevator Block to Block Entity
* Added Entity Screen and Menu
* Other minor changes.

--- a/src/main/resources/assets/betterelevatorsmod/lang/en_us.json
+++ b/src/main/resources/assets/betterelevatorsmod/lang/en_us.json
@@ -1,7 +1,7 @@
 {
   "item.betterelevatorsmod.example_item": "Example Item",
 
-  "block.betterelevatorsmod.elevator_block": "Elevator block",
+  "block.betterelevatorsmod.elevator_block": "Elevator Block",
 
   "itemGroup.betterelevatorsmod": "Better Elevators Mod"
 }
