-Restructured Packages and Classes -Added Slots to Elevator GUI -Added Cabin Item -Added Renderer for Hitbox of Cabin

--- a/src/main/resources/assets/betterelevatorsmod/lang/en_us.json
+++ b/src/main/resources/assets/betterelevatorsmod/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.betterelevatorsmod.example_item": "Example Item",
+  "item.betterelevatorsmod.elevator_cabin": "Elevator Cabin",
 
   "block.betterelevatorsmod.elevator_block": "Elevator Block",
 
